<resources>
    <string name="app_name">Material2</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide_op">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply_op">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus_op">-</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="clear">CLR</string>
    <string name="add_op">+</string>
    <string name="equal_op">=</string>
    <string name="preference_file_key" translatable="false">MY_PRE_KEY</string>
</resources>