<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_display"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        tools:text="0"
        android:gravity="bottom|end"
        android:textSize="80sp"
        android:padding="10dp"
        android:background="@color/lighter_grey"/>

    <LinearLayout
        android:id="@+id/row_four"
        style="@style/Row_layout" >

        <Button
            android:id="@+id/btn_seven"
            android:text="@string/seven"
            style="@style/Base_btn.left"/>

        <Button
            android:id="@+id/btn_eight"
            android:text="@string/eight"
            style="@style/Base_btn"/>

        <Button
            android:id="@+id/btn_nine"
            android:text="@string/nine"
            style="@style/Base_btn" />

        <Button
            android:id="@+id/btn_divide"
            style="@style/Base_btn.highlight"
            android:text="@string/divide_op"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_3"
        style="@style/Row_layout" >

        <Button
            android:id="@+id/btn_four"
            android:text="@string/four"
            style="@style/Base_btn.left"/>

        <Button
            android:id="@+id/btn_five"
            android:text="@string/five"
            style="@style/Base_btn"/>

        <Button
            android:id="@+id/btn_six"
            android:text="@string/six"
            style="@style/Base_btn"/>

        <Button
            android:id="@+id/btn_multiply"
            style="@style/Base_btn.highlight"
            android:text="@string/add_op"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_2"
        style="@style/Row_layout" >

        <Button
            android:id="@+id/btn_one"
            android:text="@string/one"
            style="@style/Base_btn.left" />

        <Button
            android:id="@+id/btn_two"
            android:text="@string/two"
            style="@style/Base_btn" />

        <Button
            android:id="@+id/btn_three"
            android:text="@string/three"
            style="@style/Base_btn" />

        <Button
            android:id="@+id/btn_subtract"
            style="@style/Base_btn.highlight"
            android:text="@string/minus_op"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_1"
        style="@style/Row_layout" >

        <Button
            android:id="@+id/btn_decimal"
            android:text="@string/decimal"
            style="@style/Base_btn.left"/>

        <Button
            android:id="@+id/btn_zero"
            android:text="@string/zero"
            style="@style/Base_btn" />

        <Button
            android:id="@+id/btn_clear"
            android:text="@string/clear"
            style="@style/Base_btn" />

        <Button
            android:id="@+id/btn_add"
            style="@style/Base_btn.highlight"
            android:text="@string/add_op"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="?colorOnPrimary"
            android:textColor="@color/white_50"
            android:text="@string/equal_op"/>

    </LinearLayout>

</LinearLayout>